[package]
name = "lua_bind_hash"
version = "1.0.0"
authors = ["jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.dev]
overflow-checks = false
[profile.release]
overflow-checks = false
[profile.test]
overflow-checks = false
[profile.bench]
overflow-checks = false
